cmake_minimum_required(VERSION 3.24)

project(Chapter02)

add_subdirectory(Exercise05)
add_subdirectory(Exercise06)
add_subdirectory(Exercise07)
add_subdirectory(Exercise08)
add_subdirectory(Exercise09)
add_subdirectory(Exercise10)
add_subdirectory(Exercise11)
add_subdirectory(Exercise12)
add_subdirectory(Activity02)
